src/css/custom.css
h1, h2, h3, h4, h5, h6 {
	color: Black;
	}

#side-carousel img {
	margin: 0 auto;
	}

.footer-blurb {
    padding: 30px 0;
    margin-top: 20px;
    background-color: #eee;
    color: black;
}
    
.footer-blurb-item {
    padding: 20px;
    }
 
.small-print {
	background-color: #fff;
	padding: 30px 0;
}

.feature,
.page-intro,
.article-intro,
.small-print {
	text-align: center;
	}

.footer {
  position: absolute;
  bottom: 0px;
  width: 100%;
  height: 60px; /* Set the fixed height of the footer here */
  line-height: 60px; /* Vertically center the text there */
  background-color: #f5f5f5;
}

	

